[project]
name = "praisonai-testgen"
version = "0.1.0"
description = "AI-Powered Test Generation for Python/pytest"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Mervin Praison", email = "mervin@praison.ai" }
]
keywords = ["ai", "testing", "pytest", "test-generation", "praisonai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "praisonaiagents>=0.0.80",
    "testagent>=0.1.0",
    "libcst>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
testgen = "praisonai_testgen.cli:app"

[project.urls]
Homepage = "https://github.com/MervinPraison/praisonai-testgen"
Documentation = "https://docs.praison.ai/testgen"
Repository = "https://github.com/MervinPraison/praisonai-testgen"
Issues = "https://github.com/MervinPraison/praisonai-testgen/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/praisonai_testgen"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
